# aries-askar

.github/workflows/: build-android.yml  build-ios.yml
wrappers/javascript/: .eslintrc.js  jest.config.base.ts  package.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json
wrappers/javascript/aries-askar-react-native/cpp/: ariesAskar.cpp  turboModuleUtility.cpp  turboModuleUtility.h
wrappers/javascript/aries-askar-react-native/src/: ReactNativeAriesAskar.ts
wrappers/javascript/nodejs/: package.json
wrappers/javascript/nodejs/tests/: joseEcdh.test.ts
wrappers/javascript/react-native/: .gitignore  CONTRIBUTING.md  README.md  package.json  react-native-aries-askar.podspec
wrappers/javascript/react-native/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
wrappers/javascript/react-native/android/src/main/java/com/reactnativeariesaskar/: AriesAskarModule.java  AriesAskarModule.kt  AriesAskarPackage.java  AriesAskarPackage.kt  NativeProxy.java
wrappers/javascript/react-native/cpp/: Logging.h  TurboModuleUtils.cpp  TurboModuleUtils.h  react-native-aries-askar.cpp  react-native-aries-askar.h
wrappers/javascript/react-native/cpp/include/: libaries-askar.h
wrappers/javascript/react-native/example/: metro.config.js  package.json
wrappers/javascript/react-native/example/android/app/: build.gradle
wrappers/javascript/react-native/example/ios/: Podfile
wrappers/javascript/react-native/example/ios/AriesAskarExample.xcodeproj/: project.pbxproj
wrappers/javascript/react-native/example/src/: App.tsx
wrappers/javascript/react-native/ios/: AriesAskar.h  AriesAskar.mm
wrappers/javascript/react-native/ios/AriesAskar.xcodeproj/: project.pbxproj
wrappers/javascript/react-native/src/: index.tsx  turboModule.ts
wrappers/javascript/react-native/test/: index.test.ts
wrappers/javascript/shared/: package.json
wrappers/javascript/shared/test/: index.test.ts
(+1 files in other folders)
